# bridge-crosser

./: CMakeLists.txt  README  ReadMe
examples/: input.yaml
src/: main.cpp
src/lib/: simulator.cpp  simulator.h  structs.h  yaml-parser.cpp  yaml-parser.h
src/tests/: simulator_tests.cpp
